--- a/beets/.config/beets/config.yaml
+++ b/beets/.config/beets/config.yaml
@@ -11,7 +11,7 @@ format_album: $albumartist - $original_year - $album
 
 sort_album: albumartist+ original_year+ album+
 
-plugins: acousticbrainz badfiles chroma convert discogs duplicates edit embedart fetchart fromfilename ftintitle fuzzy importadded info inline missing play random rewrite the
+plugins: acousticbrainz badfiles convert discogs duplicates edit embedart fetchart fromfilename ftintitle fuzzy importadded info inline missing play random rewrite the
 ui:
     color: yes
 
