--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -7,22 +7,27 @@ set $bordersize                  3
 set $myres                       10
 set $gsi                         10
 set $gso                         20
-# Colors
 
+# Custom colors
+set_from_resource $darkred     color1  #000000
+set_from_resource $red         color9  #000000
+set_from_resource $darkgreen   color2  #000000
+set_from_resource $green       color10 #000000
+set_from_resource $darkyellow  color3  #000000
+set_from_resource $yellow      color11 #000000
+set_from_resource $darkblue    color4  #000000
+set_from_resource $blue        color12 #000000
+set_from_resource $darkmagenta color5  #000000
+set_from_resource $magenta     color13 #000000
+set_from_resource $darkcyan    color6  #000000
+set_from_resource $cyan        color14 #000000
+set_from_resource $darkwhite   color7  #000000
+set_from_resource $white       color15 #000000
 
-set $bgcolor                     #263238
-set $fgcolor                     #eceff1
-#set $fgcolor                    #cccccc
-set $hfgcolor                    #c0b18b
-#set $bgcolor                    #363330
-set $iacolor                     #363330
-
-
-set $blue                        #268bd2
-set $yellow                      #b58900
-set $orange                      #cb4b16
-set $magenta                     #d33682
-set $green                       #859900
+# Use custom colors for black
+set $black       #002b36
+set $darkblack   #073642
+set $sub #839496
 
 #################
 # CONFIGURATION #
@@ -35,10 +40,11 @@ workspace_layout                 default
 ##############
 # APPEARANCE #
 ##############
-# Set window appearence          border    bg        fg       expand
-client.focused                   $hfgcolor $hfgcolor $fgcolor $hfgcolor
-client.focused_inactive          $iacolor  $iacolor  $fgcolor $iacolor
-client.unfocused                 $hfgcolor $iacolor  $fgcolor $iacolor
+# Window colors           border    background   text          
+client.focused            $white    $white       $darkblue
+client.focused_inactive   $black    $black       $sub
+client.unfocused          $black    $black       $sub
+client.urgent             $black    $black       $sub
 
 # Set font
 font pango: Lato, Material Design Icons 8 
@@ -166,17 +172,9 @@ bindsym $mod+r                   mode "resize"
 ####################
 # STARTUP PROGRAMS #
 ####################
-exec zsh /home/christof/.monitor_setup
-#exec google-musicmanager
-#exec insync-headless start
-#exec nm-applet
-#exec redshift
-#exec rssdler -rd
+exec bash /home/christof/.monitor_setup
 exec unclutter
-#exec xfce4-power-manager
-#exec nitrogen --restore
 exec xset r rate 200 25
-#exec compton -b
 exec "/home/christof/.monitor_setup"
 exec dunst
 #######
@@ -184,13 +182,14 @@ exec dunst
 #######
 bar {
     colors {
-        background               $bgcolor
-        statusline               $green
+        separator                $darkblack
+        background               $black
+        statusline               $blue
         #Workspace Colors        #border   #bg       #text
-        inactive_workspace       $bgcolor  $bgcolor  $yellow
-        focused_workspace        $green    $green    $fgcolor
+        inactive_workspace       $black  $black  $magenta
+        focused_workspace        $black    $black    $red
     }
-#    font                         Courier, Material Design Icons 10
+    font                         pango:Roboto Mono Nerd Font Complete 12px
     position                     top
     status_command               i3blocks -c ~/.config/i3/statusbar/i3blocks.conf
 }
