config changes on new thinkpad

--- a/gtk-3/.config/gtk-3.0/settings.ini
+++ b/gtk-3/.config/gtk-3.0/settings.ini
@@ -1,4 +1,4 @@
 [Settings]
-gtk-theme-name = Arc-Darker 
-gtk-font-name = Cousine 8
+gtk-theme-name = Vimix
+gtk-font-name = Hack 8
 gti-icon-theme-name = Archdroid-Cyan
