--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,242 +1,386 @@
-[bar/white]
+;=====================================================
+;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/jaagr/polybar
+;
+;   The README contains alot of information
+;
+;=====================================================
 
-;------------;
-; DIMENSIONS ;
-;------------;
+[colors]
+;background = ${xrdb:color0:#222}
+;nord 10
+background = #5E81AC
+background-alt = #444
+background-desktop = #3B4252 
+background-battery-nord = #81A1C1
+background-wlan-nord = #BF616A 
+background-cpu-nord = #D08770 
+background-memory-nord = #B48EAD
+background-volume-nord = #EBCB8B 
+;foreground = ${xrdb:color7:#222}
+;nord 6
+foreground = #ECEFF4 
+foreground-alt = #555
+primary = #ffb52a
+secondary = #e60053
+alert = #bd2c40
 
+[hacks]
+;Allow padding of modules while keeping the formatted background colour we've set
+module-margin = "   "
+
+
+[bar/bar1]
+;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 20
-offset-y = 0
-offset-x = 0
+height = 24
+;offset-x = 1%
+;offset-y = 50%
+radius = 0
+fixed-center = false
 
-border-top-size = 10
-border-bottom-size = 0
-border-right-size = 10
-border-left-size = 10
+background = ${colors.background}
+foreground = ${colors.foreground}
 
-;----------;
-; LOCATION ;
-;----------;
+line-size = 0
+line-color = #f00
 
-bottom = false
-monitor = eDP-1
-wm-restack = none
-override-redirect = false
+border-size = 0
+border-color = #88C0D0
 
-;-------;
-; FONTS ;
-;-------;
+padding-left = 0
+padding-right = 0
 
-font-0 = Hack:size=10;3
-font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=12;3"
-font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=12;3"
-font-3 = "Font Awesome 5 Brands:pixelsize=12;3"
+module-margin-left = 0
+module-margin-right = 0
+;Usefull because some icons have weird heights
+font-0 = FontAwesome:size=10;1
+font-1 = FontAwesome:size=10;2
+font-2 = "Roboto Mono Bold for Powerline:size=10;1"
+font-3 = siji:pixelsize=10;1
 
-;--------;
-; COLORS ;
-;--------;
+modules-left = i3
+modules-right = volume battery memory cpu wlan weather date
 
-background = 0
-foreground = #c5a9f9
-border-color = 0
+tray-position = right
+tray-padding = 2
+;tray-transparent = true
+;tray-background = #0063ff
 
-;---------------;
-; MISCELLANEOUS ;
-;---------------;
+;wm-restack = bspwm
+;wm-restack = i3
 
-fixed-center = true
-padding-left = 2 
-padding-right = 2
-module-margin = 1.5
+;override-redirect = true
 
-modules-left = volume backlight battery mpd
-modules-center = i3
-modules-right = wlan cpu date time
+;scroll-up = bspwm-desknext
+;scroll-down = bspwm-deskprev
 
-tray-position = none
-tray-detached = true
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
 
-[bar/mpd]
-;------------;
-; DIMENSIONS ;
-;------------;
+[module/xwindow]
+type = internal/xwindow
+label = %title:0:30:...%
 
-width = 100%
-height = 20
-offset-y = 0
-offset-x = 0
+[module/xkeyboard]
+type = internal/xkeyboard
+blacklist-0 = num lock
 
-border-top-size = 10
-border-bottom-size = 0
-border-right-size = 10
-border-left-size = 10
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+format-prefix-underline = ${colors.secondary}
 
-;----------;
-; LOCATION ;
-;----------;
+label-layout = %layout%
+label-layout-underline = ${colors.secondary}
 
-bottom = true
-monitor = eDP-1
-wm-restack = none
-override-redirect = false
+label-indicator-padding = 2
+label-indicator-margin = 1
+label-indicator-background = ${colors.secondary}
+label-indicator-underline = ${colors.secondary}
 
-;-------;
-; FONTS ;
-;-------;
+[module/filesystem]
+type = internal/fs
+interval = 25
 
-font-0 = Hack:size=10;3
-font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=10;3"
-font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=10;3"
-font-3 = "Font Awesome 5 Brands:pixelsize=10;3"
+mount-0 = /
 
-;--------;
-; COLORS ;
-;--------;
+label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+label-unmounted = %mountpoint% not mounted
+label-unmounted-foreground = ${colors.foreground-alt}
 
-background = 0
-foreground = #c5a9f9
-border-color = 0
+[module/bspwm]
+type = internal/bspwm
 
-;---------------;
-; MISCELLANEOUS ;
-;---------------;
+label-focused = %index%
+label-focused-background = ${colors.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 2
 
-fixed-center = true
-padding-left = 2 
-padding-right = 2
-module-margin = 1.5
+label-occupied = %index%
+label-occupied-padding = 2
 
-;modules-left = 
-modules-center = mpd
-;modules-right = 
+label-urgent = %index%!
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 2
 
-
-;---------;
-; MODULES ;
-;---------;
+label-empty = %index%
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 2
 
 [module/i3]
 type = internal/i3
-
-pin-workspaces = true
-strip-wsnumbers = true
+format =<label-state> <label-mode>
+index-sort = true
+wrapping-scroll = false
+enable-click = false
 enable-scroll = false
+; Only show workspaces on the same output as the bar
+;pin-workspaces = true
 
-label-unfocused-foreground = #afafaf
-label-focused-foreground = #c5a9f9
-label-urgent-foreground = #ff0000
+label-mode-padding = 2
+label-mode-foreground = #000
+label-mode-background = ${colors.primary}
 
-[module/time]
-type = internal/date
+; focused = Active workspace on focused monitor
+label-focused = %index%
+label-focused-background = ${colors.background-desktop}
+label-focused-underline = ${colors.background-desktop}
+label-focused-padding = ${module/bspwm.label-focused-padding}
 
-interval = 1.0
+; unfocused = Inactive workspace on any monitor
+label-unfocused = %index%
+label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
-date =  %H:%M
+; visible = Active workspace on unfocused monitor
+label-visible = %index%
+label-visible-background = ${self.label-focused-background}
+label-visible-underline = ${self.label-focused-underline}
+label-visible-padding = ${self.label-focused-padding}
 
-[module/date]
-type = internal/date
-date =  %e %B - %A
-label = %date%
-
-
-[module/battery]
-type = internal/battery
-
-battery = BAT1
-
-poll-interval = 1
-
-full-at = 95
-
-label-discharging = %percentage%%
-label-charging = %percentage%%
-label-full = %percentage%%
-
-format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity> <label-full>
-format-charging =  <label-charging>
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-[module/volume]
-type = internal/volume
-
-format-volume = <ramp-volume> <label-volume>
-format-muted =  0%
-
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
+; urgent = Workspace with urgency hint set
+label-urgent = %index%
+label-urgent-background = ${module/bspwm.label-urgent-background}
+label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
 [module/mpd]
 type = internal/mpd
+format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
 
-label-offline = mpd is offline
-format-online = <icon-prev> <toggle> <icon-next> <label-song>
-format-offline = <label-offline>
-host = 127.0.0.1
-port = 6600
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
+icon-prev = 
+icon-stop = 
+icon-play = 
+icon-pause = 
+icon-next = 
 
 label-song-maxlen = 25
 label-song-ellipsis = true
 
-bar-progress-width = 10
-bar-progress-indicator = |
-bar-progress-fill = ─
-bar-progress-empty = ─
+[module/xbacklight]
+type = internal/xbacklight
 
-[module/backlight]
+format = <label> <bar>
+label = BL
+
+bar-width = 10
+bar-indicator = |
+bar-indicator-foreground = #ff
+bar-indicator-font = 2
+bar-fill = ─
+bar-fill-font = 2
+bar-fill-foreground = #9f78e1
+bar-empty = ─
+bar-empty-font = 2
+bar-empty-foreground = ${colors.foreground-alt}
+
+[module/backlight-acpi]
+inherit = module/xbacklight
 type = internal/backlight
-
-; Use the following command to list available cards:
-; $ ls -1 /sys/class/backlight/
-card = radeon_bl0
-
-format = <ramp> <label>
-
-label = %percentage%%
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-
-[module/wlan]
-type = internal/network
-
-interface = wlp2s0
-
-interval = 5
-
-label-connected =  %essid%
-label-disconnected =  Not Connected
+card = intel_backlight
 
 [module/cpu]
 type = internal/cpu
-label =  %percentage%%
+interval = 2
+format-prefix-background = ${colors.background-cpu-nord}
+format-suffix-background = ${colors.background-cpu-nord}
+format-background = ${colors.background-cpu-nord}
+format-prefix = ${hacks.module-margin}
+format-suffix = ${hacks.module-margin}
+;I'm pretty sure that this was the only way I could hack this in here
+label =%{B#D08770 F#ECEFF4}   %percentage%% %{B- F-}
 
 
 [module/memory]
 type = internal/memory
-label =  %gb_used%
+interval = 2
+format-prefix = ${hacks.module-margin}
+format-suffix = ${hacks.module-margin}
+format-suffix-background=${colors.background-memory-nord}
+format-prefix-background=${colors.background-memory-nord}
+label =%{B#B48EAD F#ECEFF4}   %percentage_used%% %{B- F-}
 
-[module/network]
+[module/wlan]
 type = internal/network
-interface = wlp2s0
-label-connected =  %downspeed% |  %upspeed%
+interface = wlp3s0
+interval = 3.0
+format-connected = "  <label-connected>"
+label-connected = %essid%
+format-disconnected = "  WiFi Disconnected"
+format-connected-prefix = ${hacks.module-margin}
+format-connected-background=${colors.background-wlan-nord}
+format-disconnected-background=${colors.background-wlan-nord}
+format-connected-suffix = ${hacks.module-margin}
+format-disconnected-prefix = ${hacks.module-margin}
+format-disconnected-suffix = ${hacks.module-margin}
+connected-active-font=2 
+disconnected-active-font=2
+;format-disconnected = <label-disconnected>
+;format-disconnected-underline = ${self.format-connected-underline}
+;label-disconnected = %ifname% disconnected
+;label-disconnected-foreground = ${colors.foreground-alt}
 
-[bar/float]
 
-inherit = bar/white
+[module/eth]
+type = internal/network
+interface = enp0s25
+interval = 3.0
 
-background = #ffffff
+format-connected-underline = #55aa55
+format-connected-prefix = " "
+format-connected-prefix-foreground = ${colors.foreground-alt}
+label-connected = %local_ip%
 
-tray-position = center
+format-disconnected =
+;format-disconnected = <label-disconnected>
+;format-disconnected-underline = ${self.format-connected-underline}
+;label-disconnected = %ifname% disconnected
+;label-disconnected-foreground = ${colors.foreground-alt}
+
+[module/date]
+type = internal/date
+interval = 5
+
+date =
+date-alt = " %Y-%m-%d"
+
+time = %H:%M 
+time-alt = %H:%M:%S  
+;have to manually insert module margins here
+format-prefix = "    "
+format-suffix = ${hacks.module-margin}
+format-prefix-foreground = ${colors.foreground}
+format-underline = #0a6cf5
+;nord 9
+format-background = #434C5E
+
+label = %date% %time%
+
+[module/volume]
+type = internal/volume
+
+format-volume = <label-volume>
+label-volume =   %percentage%
+label-volume-background = ${colors.background-volume-nord}
+format-volume-prefix = ${hacks.module-margin}
+format-volume-suffix = ${hacks.module-margin}
+format-muted-prefix = ${hacks.module-margin}
+format-muted-suffix = ${hacks.module-margin}
+format-muted-foreground = ${colors.foreground}
+format-volume-foreground = ${colors.foreground}
+format-volume-prefix-background = ${colors.background-volume-nord}
+format-volume-suffix-background = ${colors.background-volume-nord}
+format-muted-suffix-background = ${colors.background-volume-nord}
+format-muted-prefix-background = ${colors.background-volume-nord}
+label-muted =   %percentage% 
+format-muted = <label-muted>
+[module/battery]
+type = internal/battery
+battery = BAT1
+adapter = AC
+full-at = 100
+background = ${colors.background-battery-nord}
+format-charging-suffix= ${hacks.module-margin}
+format-full-suffix = ${hacks.module-margin}
+format-discharging-suffix= ${hacks.module-margin}
+format-full-prefix = ${hacks.module-margin}
+format-discharging-prefix= ${hacks.module-margin}
+format-charging-prefix = ${hacks.module-margin}
+format-charging-background = ${colors.background-battery-nord}
+format-charging =  <label-charging>
+format-charging-underline = #ffb52a
+format-discharging =  <label-discharging>
+format-discharging-underline = ${self.format-charging-underline}
+format-discharging-background = ${self.format-charging-background}
+format-discharging-suffix-background = ${self.background}
+format-full-prefix-foreground = ${colors.foreground}
+format-full-underline = ${self.format-charging-underline}
+format-full-prefix-background= ${self.format-charging-background}
+format-full-suffix-background= ${self.format-charging-background}
+
+
+[module/temperature]
+type = internal/temperature
+thermal-zone = 0
+warn-temperature = 60
+
+format = <ramp> <label>
+format-underline = #f50a4d
+format-warn = <ramp> <label-warn>
+format-warn-underline = ${self.format-underline}
+
+label = %temperature%
+label-warn = %temperature%
+label-warn-foreground = ${colors.secondary}
+
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-foreground = ${colors.foreground-alt}
+
+[module/powermenu]
+type = custom/menu
+
+format-spacing = 1
+
+label-open = 
+label-open-foreground = ${colors.secondary}
+label-close =  cancel
+label-close-foreground = ${colors.secondary}
+label-separator = |
+label-separator-foreground = ${colors.foreground-alt}
+
+menu-0-0 = reboot
+menu-0-0-exec = menu-open-1
+menu-0-1 = power off
+menu-0-1-exec = menu-open-2
+
+menu-1-0 = cancel
+menu-1-0-exec = menu-open-0
+menu-1-1 = reboot
+menu-1-1-exec = sudo reboot
+
+menu-2-0 = power off
+menu-2-0-exec = sudo poweroff
+menu-2-1 = cancel
+menu-2-1-exec = menu-open-0
+
+[module/weather]
+type = custom/script
+exec = ~/.config/polybar/weather.sh
+interval = 600
+label-font = 3
+
+[settings]
+screenchange-reload = true
+;compositing-background = xor
+;compositing-background = screen
+;compositing-foreground = source
+;compositing-border = over
+
+[global/wm]
+margin-top = 7
+margin-bottom = 5
+
+; vim:ft=dosini
+
+
