--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,114 +1,209 @@
-;=====================================================
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/jaagr/polybar
-;
-;   The README contains alot of information
-;
-;=====================================================
-
 [colors]
-;background = ${xrdb:color0:#222}
-;nord 10
-background = #5E81AC
-background-alt = #444
-background-desktop = #3B4252 
-background-battery-nord = #81A1C1
-background-wlan-nord = #BF616A 
-background-cpu-nord = #D08770 
-background-memory-nord = #B48EAD
-background-volume-nord = #EBCB8B 
-;foreground = ${xrdb:color7:#222}
-;nord 6
-foreground = #ECEFF4 
+background = #282a36
+background-alt = #073642
+foreground = #93a1a1
 foreground-alt = #555
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
-
-[hacks]
-;Allow padding of modules while keeping the formatted background colour we've set
-module-margin = "   "
-
-
-[bar/bar1]
-;monitor = ${env:MONITOR:HDMI-1}
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[bar/top]
 width = 100%
 height = 24
-;offset-x = 1%
-;offset-y = 50%
-radius = 0
-fixed-center = false
-
+fixed-center = true
 background = ${colors.background}
 foreground = ${colors.foreground}
-
-line-size = 0
-line-color = #f00
-
-border-size = 0
-border-color = #88C0D0
-
 padding-left = 0
 padding-right = 0
-
 module-margin-left = 0
 module-margin-right = 0
-;Usefull because some icons have weird heights
-font-0 = FontAwesome:size=10;1
-font-1 = FontAwesome:size=10;2
-font-2 = "Roboto Mono Bold for Powerline:size=10;1"
-font-3 = siji:pixelsize=10;1
 
-modules-left = i3
-modules-right = volume battery memory cpu wlan weather date
+font-0 = Comfortaa:pixelsize=8;2
+font-1 = UbuntuMono Nerd Font:size=10;1
+font-2 = UbuntuMono Nerd Font:size=16;4
+
+modules-left = ip wireless-network
+modules-center = date
+modules-right = weather pulseaudio battery shutdown-text
+
+tray-position = none
+tray-padding = 2
+
+module-margin = 0
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[bar/bottom]
+bottom = true
+width = 100%
+height = 24
+fixed-center = true
+background = ${colors.background}
+foreground = ${colors.foreground}
+padding-left = 0
+padding-right = 0
+module-margin-left = 0
+module-margin-right = 0
+
+font-0 = Comfortaa:pixelsize=8;2
+font-1 = UbuntuMono Nerd Font:size=10;2
+font-2 = UbuntuMono Nerd Font:size=16;3
+
+modules-left = bspwm i3 
+modules-center =  windowtitle
+modules-right = cpu memory
 
 tray-position = right
-tray-padding = 2
-;tray-transparent = true
-;tray-background = #0063ff
+tray-padding = 
 
-;wm-restack = bspwm
-;wm-restack = i3
+cursor-click = pointer
+cursor-scroll = ns-resize
 
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
-
-[module/xwindow]
+; #### MODULES ####
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[module/windowtitle]
 type = internal/xwindow
-label = %title:0:30:...%
+format = <label>
+label = %title%
+format-foreground = #f5f5f5
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[module/battery]
+type = internal/battery
+format-charging = <animation-charging>  <label-charging>
+format-full = <label-full>
+label-charging = "  %percentage%% Charged  "
+label-full = "  Fully charged  "
+animation-charging-0 = "  "
+animation-charging-1 = "  "
+animation-charging-2 = "  "
+animation-charging-3 = "  "
+animation-charging-4 = "  "
+format-discharging = "    <label-discharging>"
+label-discharging = "  %percentage%%"
 
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
+format-charging-background = #ff79c6
+format-charging-foreground = #212121
+format-charging-prefix = %{T3}%{T-}
+format-charging-prefix-foreground = #ff79c6
+format-charging-prefix-background = #6272a4		
+;format-charging-suffix = %{T3}%{T-}
+;format-charging-suffix-foreground = #ff79c6
+;format-charging-suffix-background = #ff79c6
 
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
 
-label-layout = %layout%
-label-layout-underline = ${colors.secondary}
+format-discharging-background = #ff79c6
+format-discharging-foreground = #212121
+format-discharging-prefix = %{T3}%{T-}
+format-discharging-prefix-foreground = #ff79c6
+format-discharging-prefix-background = #6272a4		
+;format-discharging-suffix = %{T3}%{T-}
+;format-discharging-suffix-foreground = #ff79c6
+;format-discharging-suffix-background = #ff79c6
 
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
-
+format-full-background = #ff79c6
+format-full-foreground = #212121
+format-full-prefix = %{T3}%{T-}
+format-full-prefix-foreground = #ff79c6
+format-full-prefix-background = #6272a4		
+;format-full-suffix = %{T3}%{T-}
+;format-full-suffix-foreground = #ff79c6
+;format-full-suffix-background = #ff79c6	
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[module/cpu]
+type = internal/cpu
+format = <label>
+label = "   %percentage%%  "
+interval = 0.5
+format-background = #44475a	
+format-foreground = #f5f5f5
+format-prefix = %{T3}%{T-}
+format-prefix-foreground = #44475a	
+format-prefix-background = ${colors.background}
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[module/memory]
+type = internal/memory
+format = <label>
+label = "   %percentage_used%%  "
+interval = 3
+format-background = #50fa7b	
+format-foreground = #212121
+format-prefix = %{T3}%{T-}
+format-prefix-foreground = #50fa7b	
+format-prefix-background = #44475a	
+format-suffix = %{T3}%{T-}
+format-suffix-foreground = #282a36
+format-suffix-background = #50fa7b
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[module/pulseaudio]
+type = internal/pulseaudio
+use-ui-max = true
+interval = 5
+format-volume = "<ramp-volume> <label-volume>  "
+format-muted = <label-muted>
+label-muted = "   Muted  "
+ramp-volume-0 ="  "
+ramp-volume-1 ="   "
+ramp-volume-2 =" 墳"
+format-volume-background = #6272a4
+format-volume-foreground = #f8f8f8
+format-volume-prefix = %{T3} %{T-}
+format-volume-prefix-foreground = #6272a4	
+format-volume-prefix-background = #f1fa8c	
+format-muted-prefix = %{T3} %{T-}
+format-muted-background = #6272a4
+format-muted-foreground = #f8f8f8
+format-muted-prefix-foreground = #6272a4	
+format-muted-prefix-background = #ffb86c	
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[module/backlight]
+type = internal/xbacklight
+enable-scroll = true
+format = <label>
+label = "    %percentage%%"
+format-background = #f1fa8c
+format-foreground = #212121
+format-prefix = %{T3}%{T-}
+format-prefix-foreground = #f1fa8c	
+format-prefix-background = #ffb86c	
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[module/wireless-network]
+type = internal/network
+format-connected =    <label-connected>
+label-connected = %essid% :  %upspeed%   %downspeed%
+interface = wlp1s0
+format-disconnected-suffix =%{T3}%{T-}
+format-disconnected-background = #ff5555
+format-disconnected-suffix-foreground = ${colors.background-alt}
+format-disconnected-suffix-background = #ff5555	
+format-disconnected-prefix = %{T3}%{T-}
+format-disconnected-prefix-foreground = ${colors.background-alt}
+format-disconnected-prefix-background = ${colors.background-alt}
+format-connected-suffix =%{T3}%{T-}
+format-connected-background = #ff5555
+format-connected-foreground = #212121
+format-connected-suffix-foreground = #ff5555
+format-connected-suffix-background = 282a36
+format-connected-prefix = %{T3}%{T-}
+format-connected-prefix-foreground = #ff5555	
+format-connected-prefix-background = #ff5555	
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[module/ip]
+type = internal/network
+interface = wlp1s0
+format-connected =  <label-connected>
+format-disconnected = <label-disconnected>
+label-disconnected = Not Connected
+label-connected = %local_ip%
+format-connected-background = #bd93f9	
+format-connected-foreground = #212121
+format-connected-suffix =%{T3}%{T-}
+format-connected-suffix-foreground = #bd93f9
+format-connected-suffix-background = #ff5555
+format-connected-prefix = %{T3}%{T-}
+format-connected-prefix-foreground = #bd93f9
+format-connected-prefix-background = #bd93f9
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [module/bspwm]
 type = internal/bspwm
 
@@ -128,13 +223,15 @@ label-empty = %index%
 label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 2
 
+; Separator in between workspaces
+; label-separator = |
+
 [module/i3]
 type = internal/i3
-format =<label-state> <label-mode>
+format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
-enable-click = false
-enable-scroll = false
+
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
 
@@ -144,8 +241,9 @@ label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
-label-focused-background = ${colors.background-desktop}
-label-focused-underline = ${colors.background-desktop}
+label-focused-background = #8be9fd	
+label-focused-foreground = #212121
+label-focused-underline = ${module/bspwm.label-focused-underline}
 label-focused-padding = ${module/bspwm.label-focused-padding}
 
 ; unfocused = Inactive workspace on any monitor
@@ -163,224 +261,79 @@ label-urgent = %index%
 label-urgent-background = ${module/bspwm.label-urgent-background}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
-
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-[module/xbacklight]
-type = internal/xbacklight
-
-format = <label> <bar>
-label = BL
-
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #ff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
-
-[module/backlight-acpi]
-inherit = module/xbacklight
-type = internal/backlight
-card = intel_backlight
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix-background = ${colors.background-cpu-nord}
-format-suffix-background = ${colors.background-cpu-nord}
-format-background = ${colors.background-cpu-nord}
-format-prefix = ${hacks.module-margin}
-format-suffix = ${hacks.module-margin}
-;I'm pretty sure that this was the only way I could hack this in here
-label =%{B#D08770 F#ECEFF4}   %percentage%% %{B- F-}
-
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = ${hacks.module-margin}
-format-suffix = ${hacks.module-margin}
-format-suffix-background=${colors.background-memory-nord}
-format-prefix-background=${colors.background-memory-nord}
-label =%{B#B48EAD F#ECEFF4}   %percentage_used%% %{B- F-}
-
-[module/wlan]
-type = internal/network
-interface = wlp3s0
-interval = 3.0
-format-connected = "  <label-connected>"
-label-connected = %essid%
-format-disconnected = "  WiFi Disconnected"
-format-connected-prefix = ${hacks.module-margin}
-format-connected-background=${colors.background-wlan-nord}
-format-disconnected-background=${colors.background-wlan-nord}
-format-connected-suffix = ${hacks.module-margin}
-format-disconnected-prefix = ${hacks.module-margin}
-format-disconnected-suffix = ${hacks.module-margin}
-connected-active-font=2 
-disconnected-active-font=2
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-
-[module/eth]
-type = internal/network
-interface = enp0s25
-interval = 3.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
+; Separator in between workspaces
+; label-separator = |
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [module/date]
 type = internal/date
-interval = 5
-
-date =
-date-alt = " %Y-%m-%d"
-
-time = %H:%M 
-time-alt = %H:%M:%S  
-;have to manually insert module margins here
-format-prefix = "    "
-format-suffix = ${hacks.module-margin}
-format-prefix-foreground = ${colors.foreground}
-format-underline = #0a6cf5
-;nord 9
-format-background = #434C5E
-
-label = %date% %time%
-
-[module/volume]
-type = internal/volume
-
-format-volume = <label-volume>
-label-volume =   %percentage%
-label-volume-background = ${colors.background-volume-nord}
-format-volume-prefix = ${hacks.module-margin}
-format-volume-suffix = ${hacks.module-margin}
-format-muted-prefix = ${hacks.module-margin}
-format-muted-suffix = ${hacks.module-margin}
-format-muted-foreground = ${colors.foreground}
-format-volume-foreground = ${colors.foreground}
-format-volume-prefix-background = ${colors.background-volume-nord}
-format-volume-suffix-background = ${colors.background-volume-nord}
-format-muted-suffix-background = ${colors.background-volume-nord}
-format-muted-prefix-background = ${colors.background-volume-nord}
-label-muted =   %percentage% 
-format-muted = <label-muted>
-[module/battery]
-type = internal/battery
-battery = BAT1
-adapter = AC
-full-at = 100
-background = ${colors.background-battery-nord}
-format-charging-suffix= ${hacks.module-margin}
-format-full-suffix = ${hacks.module-margin}
-format-discharging-suffix= ${hacks.module-margin}
-format-full-prefix = ${hacks.module-margin}
-format-discharging-prefix= ${hacks.module-margin}
-format-charging-prefix = ${hacks.module-margin}
-format-charging-background = ${colors.background-battery-nord}
-format-charging =  <label-charging>
-format-charging-underline = #ffb52a
-format-discharging =  <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
-format-discharging-background = ${self.format-charging-background}
-format-discharging-suffix-background = ${self.background}
-format-full-prefix-foreground = ${colors.foreground}
-format-full-underline = ${self.format-charging-underline}
-format-full-prefix-background= ${self.format-charging-background}
-format-full-suffix-background= ${self.format-charging-background}
-
-
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
-
-format = <ramp> <label>
-format-underline = #f50a4d
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
-
-label = %temperature%
-label-warn = %temperature%
-label-warn-foreground = ${colors.secondary}
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
-
-[module/powermenu]
-type = custom/menu
-
-format-spacing = 1
-
-label-open = 
-label-open-foreground = ${colors.secondary}
-label-close =  cancel
-label-close-foreground = ${colors.secondary}
-label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
-
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
-
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
-
+interval = 1.0
+date =  %A %b %e
+time = %l:%M %p
+format =   <label>
+label = %time%, %date%
+format-foreground = #f8f8f2
+;format-background = ${colors.background-alt}
+;format-prefix = %{T3}%{T-}
+;format-prefix-foreground = ${colors.background-alt}
+;format-prefix-background = ${colors.background}
+;format-suffix = %{T3}%{T-}
+;format-suffix-foreground = ${colors.background-alt}
+;format-suffix-background = ${colors.background}
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [module/weather]
 type = custom/script
-exec = ~/.config/polybar/weather.sh
-interval = 600
-label-font = 3
+exec = python3 ~/.config/polybar/scripts/weather.py
+interval = 90
+format-background = #ffb86c	
+format-foreground = #212121
+format-prefix = %{T3}%{T-}
+format-prefix-foreground = #ffb86c	
+format-prefix-background = ${colors.background}
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[module/shutdown-text]
+type = custom/menu
+expand-right = true
 
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
+menu-0-0 = Shutdown
+menu-0-0-exec = systemctl poweroff
+menu-0-1 = Hibernate
+menu-0-1-exec = systemctl hibernate
+menu-0-2 = Reboot
+menu-0-2-exec = systemctl reboot
+menu-0-3 = Log out
+menu-0-3-exec = i3-msg exit
 
-[global/wm]
-margin-top = 7
-margin-bottom = 5
+label-open = "        "
+format-background = #f44336
+format-foreground = #f5f5f5
+format-prefix = %{T3}%{T-}
+format-prefix-background = #ff79c6
+format-prefix-foreground = #f44336
 
-; vim:ft=dosini
+label-close = " X "
 
+label-separator = "  "
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[module/shutdown-icons]
+type = custom/menu
+expand-right = true
 
+menu-0-0 = ⏻
+menu-0-0-exec = systemctl poweroff
+menu-0-1 = ⏾
+menu-0-1-exec = systemctl hibernate
+menu-0-2 = ﰇ
+menu-0-2-exec = systemctl reboot
+menu-0-3 = 
+menu-0-3-exec = i3-msg exit
+
+label-open = "        "
+format-background = #f44336
+format-foreground = #f5f5f5
+format-prefix = %{T3}%{T-}
+format-prefix-background = #ff79c6
+format-prefix-foreground = #f44336
+
+label-close = " X "
+
+label-separator = "  "
