--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -60,17 +60,19 @@ bindsym Print                    exec scrot /home/christof/scrot.png;exec notify
 bindsym Shift+Print              exec scrot -s /home/christof/scrot.png;exec notify-send -u low "scrot" "scrot captured";
 bindsym $mod+n                   gaps inner all set 0;gaps outer all set 0;
 bindsym $mod+m                   gaps inner all set $gsi;gaps outer all set $gso;
-bindsym $mod+Shift+b             exec env XSECURELOCK_SAVER=saver_mpv XSECURELOCK_DISCARD_FIRST_KEYPRESS=0 XSECURELOCK_IMAGE_DURATION_SECONDS=8 XSECURELOCK_LIST_VIDEOS_COMMAND='find ~/Images/screensaver/blade_runner -type f' xsecurelock
+bindsym $mod+Shift+b             exec env XSECURELOCK_SAVER=saver_mplayer XSECURELOCK_DISCARD_FIRST_KEYPRESS=0 XSECURELOCK_IMAGE_DURATION_SECONDS=8 XSECURELOCK_LIST_VIDEOS_COMMAND='find ~/Images/screensaver/blade_runner -type f' xsecurelock
 
 ## backlight
-bindcode 233 exec xbacklight +5
-bindcode 232 exec xbacklight -5
+bindsym  XF86MonBrightnessUp     exec "brightnessctl -d 'amdgpu_bl0' set +10%"
+
+# Decrease backlight
+bindsym  XF86MonBrightnessDown   exec "brightnessctl -d 'amdgpu_bl0' set 10%-"
 
 ### Audio Keybindings ###
 bindsym $mod+b                   exec "amixer -q sset Speaker,0 toggle;amixer -q sset Headphone,0 toggle"
-bindsym XF86AudioRaiseVolume     exec "dvol -i 1"
-bindsym XF86AudioLowerVolume     exec "dvol -d 1"
-bindsym XF86AudioMute            exec "amixer -q sset Master,0 toggle"
+bindsym XF86AudioRaiseVolume     exec "pactl set-sink-volume @DEFAULT_SINK@ +1000"
+bindsym XF86AudioLowerVolume     exec "pactl set-sink-volume @DEFAULT_SINK@ -1000"
+bindsym XF86AudioMute            exec "pactl set-sink-mute @DEFAULT_SINK@ toggle"
 bindsym XF86AudioPlay            exec "cmus-remote -u";exec notify-send -u low "Play" "Music paused"
 bindsym XF86AudioStop            exec "cmus-remote -s"
 bindsym XF86AudioPrev            exec "cmus-remote -r"
@@ -169,6 +171,7 @@ bindsym $mod+r                   mode "resize"
 ####################
 exec_always --no-startup-id feh --bg-fill ~/neon_wp.png
 exec dunst
+
 #######
 # BAR #
 #######
