--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,11 +1,16 @@
 {
+    "coc.preferences.formatOnSaveFiletypes": [
+        "scala"
+    ],
     "coc.preferences.formatOnType": true,
     "codeLens.enable": true,
-    "diagnostic.errorSign": "✘",
-    "diagnostic.warningSign": "",
-    "metals.statusBarEnabled": true,
     "diagnostic.checkCurrentLine": true,
-    "metals.superMethodLensesEnabled": true,
-    "coc.preferences.formatOnSaveFiletypes": ["scala"],
-    "metals.showImplicitArguments": true
+    "diagnostic.errorSign": "\u2718",
+    "diagnostic.warningSign": "\uf12a",
+    "metals": {
+        "showImplicitArguments": true,
+        "statusBarEnabled": true,
+        "superMethodLensesEnabled": true,
+        "showInferredType": true
+    }
 }
