--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 # Override prefix key
 unbind C-b
 set -g prefix C-a
+bind-key C-a send-prefix
 
 set -g mouse on
 
@@ -16,22 +17,18 @@ set -g pane-base-index 1
 set-option -g renumber-windows on
 
 ## Vim like navigation
-
+# Set new pane to open in current directory
+bind c new-window -c "#{pane_current_path}"
 # use <prefix> s for horizontal split
-bind s split-window -v
+bind s split-window -v -c "#{pane_current_path}"
 # use <prefix> v for vertical split
-bind v split-window -h
+bind v split-window -h -c "#{pane_current_path}"
 
 #jump between panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
 
 bind < resize-pane -L 10
 bind > resize-pane -R 10
